--- a/css/scss/scss-custom/prakerja-style.scss
+++ b/css/scss/scss-custom/prakerja-style.scss
@@ -13,7 +13,7 @@ $dark:          #263444;
 // @import "../scss-bootstrap/bootstrap.scss";
 
 // custom style
-@import "pds-style";
+// @import "pds-style";
 @import "header";
 @import "footer";
 @import "button";
