--- a/pug/home/section_inklusivitas.pug
+++ b/pug/home/section_inklusivitas.pug
@@ -4,17 +4,17 @@ section.section-course.py-3.py-lg-5
         .row.px-4.px-lg-0.custom-rounded
             .col-lg-3.img-pmi.d-flex.align-items-end.p-3.text-start
                 div
-                    h4.display-4.text-white 3%
+                    h4.display-4.text-white.pmi -%
                     h5.text-white Purna PMI
             .col-lg-3.img-desil.d-flex.align-items-end.p-3.text-start
                 div
-                    h4.display-4.text-white 10%
+                    h4.display-4.text-white.desil -%
                     h5.text-white Purna Desil 1
             .col-lg-3.img-difabel.d-flex.align-items-end.p-3.text-start
                 div
-                    h4.display-4.text-white 3%
+                    h4.display-4.text-white.difabel -%
                     h5.text-white Purna Difabel
             .col-lg-3.img-perdesaan.d-flex.align-items-end.p-3.text-start
                 div
-                    h4.display-4.text-white 65%
+                    h4.display-4.text-white.vilage -%
                     h5.text-white Purna Perdesaan
