--- a/pug/home/section_lembagapelatihan.pug
+++ b/pug/home/section_lembagapelatihan.pug
@@ -7,7 +7,8 @@ section.section-course.py-3.py-lg-5
                 .border.rounded-3.p-3
                     //- chart total lembaga pelatihan
                     h5.mb-4 Total Lembaga Pelatihan
-                    span.skeleton-box.w-100.rounded(style="height:300px")
+                    div#course-provider(style="height:300px")
+                    //- span.skeleton-box.w-100.rounded(style="height:300px")
          
             .col-lg-6.mb-4
                 .border.rounded-3.p-3
