update chart lp dan transaksi lp

--- a/pug/home/section_lembagapelatihan.pug
+++ b/pug/home/section_lembagapelatihan.pug
@@ -14,7 +14,8 @@ section.section-course.py-3.py-lg-5
                 .border.rounded-3.p-3
                     //- Chart total jumlah //
                     h5.mb-4 Total Jumlah Pelatihan
-                    span.skeleton-box.w-100.rounded(style="height:300px")
+                    div#courses(style="height:300px")
+                    //- span.skeleton-box.w-100.rounded(style="height:300px")
             
             .col-lg-6.mb-4
                 .border.rounded-3.p-3.pb-0
