update kategori pelatihan

--- a/pug/home/section_lembagapelatihan.pug
+++ b/pug/home/section_lembagapelatihan.pug
@@ -26,7 +26,7 @@ section.section-course.py-3.py-lg-5
             .col-lg-6.mb-4
                 .border.rounded-3.p-3
                     //- Chart total jumlah //
-                    h5.mb-4 Preferensi Moda Pelatihan
+                    h5.mb-4 Moda Pelatihan
                     span.skeleton-box.w-100.rounded(style="height:300px")
 
             .col-lg-12.mb-4
@@ -36,23 +36,42 @@ section.section-course.py-3.py-lg-5
             .col-lg-12.mb-4
                 h5.mb-4 Kategori Pelatihan Terfavorit
                 .row.px-3
-                    .col-6.col-lg-20.col-md-6.bg-b800.p-4.rounded-lg-start.align-items-end.p-3.text-start
-                        div
-                        img.mb-3(src="img/kat1-pelatihan.svg", alt="")
-                        h5.text-white Penjualan & Pemasaran
+                    .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
+                        i.bi.bi-shop.mb-3.fs-1.text-primary
+                        h6 Penjualan & Pemasaran
 
-                    .col-6.col-lg-20.col-md-6.bg-t500.p-4.align-items-end.p-3.text-start
-                        img.mb-3(src="img/kat2-pelatihan.svg", alt="")
-                        h5.text-white Gaya Hidup
+                    .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
+                        i.bi.bi-luggage.mb-3.fs-1.text-primary
+                        h6 Gaya Hidup
 
-                    .col-6.col-lg-20.col-md-6.bg-y500.p-4.align-items-end.p-3.text-start
-                        img.mb-3(src="img/kat3-pelatihan.svg", alt="")
-                        h5.text-white Makanan dan Minuman
+                    .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
+                        i.bi.bi-cup-straw.mb-3.fs-1.text-primary
+                        h6 Makanan dan Minuman
 
-                    .col-6.col-lg-20.col-md-6.bg-o500.p-4.align-items-end.p-3.text-start
-                        img.mb-3(src="img/kat4-pelatihan.svg", alt="")
-                        h5.text-white Manajemen
+                    .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
+                        i.bi.bi-diagram-2.mb-3.fs-1.text-primary
+                        h6 Manajemen
 
-                    .col-12.col-lg-20.col-md-12.bg-b500.p-4.rounded-lg-end.align-items-end.p-3.text-start
-                        img.mb-3(src="img/kat5-pelatihan.svg", alt="")
-                        h5.text-white Teknik
+                    .col-12.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
+                        i.bi.bi-wrench-adjustable-circle.mb-3.fs-1.text-primary
+                        h6 Teknik
+
+                    .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
+                        i.bi.bi-layers.mb-3.fs-1.text-primary
+                        h6 Ritel/Perdagangan
+
+                    .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
+                        i.bi.bi-tools.mb-3.fs-1.text-primary
+                        h6 Pemeliharaan, Perbaikan, Servis
+
+                    .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
+                        i.bi.bi-car-front.mb-3.fs-1.text-primary
+                        h6 Otomotif
+
+                    .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
+                        i.bi.bi-water.mb-3.fs-1.text-primary
+                        h6 Perikanan
+
+                    .col-12.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
+                        i.bi.bi-boxes.mb-3.fs-1.text-primary
+                        h6 Operasi, Gudang
