--- a/pug/home/section_lembagapelatihan.pug
+++ b/pug/home/section_lembagapelatihan.pug
@@ -34,7 +34,7 @@ section.section-course.py-3.py-lg-5
                 span.skeleton-box.w-100.rounded(style="height:300px")
 
             .col-lg-12.mb-4
-                h5.mb-4 Kategori Pelatihan Terfavorit
+                h5.mb-4 Kategori Pilihan Paling Diminati
                 .row.px-3
                     .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
                         i.bi.bi-shop.mb-3.fs-1.text-primary
