--- a/pug/home/section_lembagapelatihan.pug
+++ b/pug/home/section_lembagapelatihan.pug
@@ -26,8 +26,9 @@ section.section-course.py-3.py-lg-5
             .col-lg-6.mb-4
                 .border.rounded-3.p-3
                     //- Chart total jumlah //
-                    h5.mb-4 Moda Pelatihan
-                    span.skeleton-box.w-100.rounded(style="height:300px")
+                    h5.mb-4 Preferensi Moda Pelatihan
+                    div#course-preference(style="height:400px")
+                    //- span.skeleton-box.w-100.rounded(style="height:300px")
 
             .col-lg-12.mb-4
                 h5.my-4 Kategori Pelatihan Terbanyak
