--- a/pug/home/section_lembagapelatihan.pug
+++ b/pug/home/section_lembagapelatihan.pug
@@ -17,17 +17,30 @@ section.section-course.py-3.py-lg-5
                     div#courses(style="height:300px")
                     //- span.skeleton-box.w-100.rounded(style="height:300px")
             
+            //- .col-lg-6.mb-4
+            //-     .border.rounded-3.p-3.pb-0
+            //-         h5.mb-4 4 Moda Pelatihan
+            //-         p.p-1.text-secondary Moda pelatihan yang dapat dipilih penerima Prakerja :
+            //-         img.mw-100(src="../img/phone.webp", alt="")
+        .row
+            .col-12
+                h5.mb-4 Moda Pelatihan
             .col-lg-6.mb-4
-                .border.rounded-3.p-3.pb-0
-                    h5.mb-4 4 Pilihan Moda Pelatihan
-                    p.p-1.text-secondary Moda pelatihan yang dapat dipilih penerima Prakerja :
-                    img.mw-100(src="../img/phone.webp", alt="")
-  
-            .col-lg-6.mb-4
-                .border.rounded-3.p-3
-                    //- Chart total jumlah //
-                    h5.mb-4 Moda Pelatihan
-                    span.skeleton-box.w-100.rounded(style="height:300px")
+                //- .border.rounded-3.p-3
+                //- Chart total jumlah //
+                span.skeleton-box.w-100.rounded(style="height:300px")
+
+            .col-lg-6.mb-4 
+                .row 
+                    .col-12 
+                        p Total Pelatihan
+                    .col-lg-4
+                        p Webinar
+                    .col-lg-4 
+                        p Pembelajaran Mandiri
+                    .col-lg-4
+                        p Luring
+
 
             .col-lg-12.mb-4
                 h5.my-4 Kategori Pelatihan Terbanyak
