add content moda pelatihan

--- a/pug/home/section_lembagapelatihan.pug
+++ b/pug/home/section_lembagapelatihan.pug
@@ -24,24 +24,44 @@ section.section-course.py-3.py-lg-5
             //-         img.mw-100(src="../img/phone.webp", alt="")
         .row
             .col-12
-                h5.mb-4 Moda Pelatihan
+                h5.mb-4.text-center Moda Pelatihan
             .col-lg-6.mb-4
                 //- .border.rounded-3.p-3
                 //- Chart total jumlah //
-                span.skeleton-box.w-100.rounded(style="height:300px")
+                #course-preference(style="height:300px")
 
             .col-lg-6.mb-4 
                 .row 
-                    .col-12 
-                        p Total Pelatihan
-                    .col-lg-4
-                        p Webinar
-                    .col-lg-4 
-                        p Pembelajaran Mandiri
-                    .col-lg-4
-                        p Luring
+                    .col-12.mb-lg-4.mb-3
+                        .border.p-3.d-flex.gap-3.rounded.bg-white
+                            div 
+                                i.bi.bi-view-list.fs-3.text-primary
+                            div 
+                                h5.fs-3 14.433
+                                p.m-0 Total Pelatihan
+                    .col-lg-4.mb-3
+                        .border.p-3.d-flex.gap-3.rounded.h-100.bg-white
+                            div 
+                                i.bi.bi-person-video2.fs-4.text-primary
+                            div 
+                                h5.fs-4 1.203
+                                p.m-0 Webinar
+                    .col-lg-4.mb-3
+                        .border.p-3.d-flex.gap-3.rounded.h-100.bg-white
+                            div 
+                                i.bi.bi-person-video3.fs-4.text-primary
+                            div 
+                                h5.fs-4 3.200
+                                p.m-0 Pembelajaran Mandiri
+                    .col-lg-4.mb-3
+                        .border.p-3.d-flex.gap-3.rounded.h-100.bg-white
+                            div 
+                                i.bi.bi-easel2.fs-4.text-primary
+                            div 
+                                h5.fs-4 300
+                                p.m-0 Luring
 
-
+        .row
             .col-lg-12.mb-4
                 h5.my-4 Kategori Pelatihan Terbanyak
                 span.skeleton-box.w-100.rounded(style="height:300px")
