update category chart

--- a/pug/home/section_lembagapelatihan.pug
+++ b/pug/home/section_lembagapelatihan.pug
@@ -64,7 +64,8 @@ section.section-course.py-3.py-lg-5
         .row
             .col-lg-12.mb-4
                 h5.my-4 Kategori Pelatihan Terbanyak
-                span.skeleton-box.w-100.rounded(style="height:300px")
+                div#course-category(style="height:600px")
+                //- span.skeleton-box.w-100.rounded(style="height:300px")
 
             .col-lg-12.mb-4
                 h5.mb-4 Kategori Pilihan Paling Diminati
