update items for course category

--- a/pug/home/section_lembagapelatihan.pug
+++ b/pug/home/section_lembagapelatihan.pug
@@ -31,7 +31,7 @@ section.section-course.py-3.py-lg-5
                 #course-preference(style="height:300px")
 
             .col-lg-6.mb-4 
-                .row 
+                .row#course-preference-numbers
                     .col-12.mb-lg-4.mb-3
                         .border.p-3.d-flex.gap-3.rounded.bg-white
                             div 
@@ -69,43 +69,43 @@ section.section-course.py-3.py-lg-5
 
             .col-lg-12.mb-4
                 h5.mb-4 Kategori Pilihan Paling Diminati
-                .row.px-3
-                    .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
-                        i.bi.bi-shop.mb-3.fs-1.text-primary
-                        h6 Penjualan & Pemasaran
+                #course-category-list.row.px-3
+                    //- .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
+                    //-     i.bi.bi-shop.mb-3.fs-1.text-primary
+                    //-     h6 Penjualan & Pemasaran
 
-                    .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
-                        i.bi.bi-luggage.mb-3.fs-1.text-primary
-                        h6 Gaya Hidup
+                    //- .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
+                    //-     i.bi.bi-luggage.mb-3.fs-1.text-primary
+                    //-     h6 Gaya Hidup
 
-                    .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
-                        i.bi.bi-cup-straw.mb-3.fs-1.text-primary
-                        h6 Makanan dan Minuman
+                    //- .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
+                    //-     i.bi.bi-cup-straw.mb-3.fs-1.text-primary
+                    //-     h6 Makanan dan Minuman
 
-                    .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
-                        i.bi.bi-diagram-2.mb-3.fs-1.text-primary
-                        h6 Manajemen
+                    //- .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
+                    //-     i.bi.bi-diagram-2.mb-3.fs-1.text-primary
+                    //-     h6 Manajemen
 
-                    .col-12.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
-                        i.bi.bi-wrench-adjustable-circle.mb-3.fs-1.text-primary
-                        h6 Teknik
+                    //- .col-12.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
+                    //-     i.bi.bi-wrench-adjustable-circle.mb-3.fs-1.text-primary
+                    //-     h6 Teknik
 
-                    .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
-                        i.bi.bi-layers.mb-3.fs-1.text-primary
-                        h6 Ritel/Perdagangan
+                    //- .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
+                    //-     i.bi.bi-layers.mb-3.fs-1.text-primary
+                    //-     h6 Ritel/Perdagangan
 
-                    .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
-                        i.bi.bi-tools.mb-3.fs-1.text-primary
-                        h6 Pemeliharaan, Perbaikan, Servis
+                    //- .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
+                    //-     i.bi.bi-tools.mb-3.fs-1.text-primary
+                    //-     h6 Pemeliharaan, Perbaikan, Servis
 
-                    .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
-                        i.bi.bi-car-front.mb-3.fs-1.text-primary
-                        h6 Otomotif
+                    //- .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
+                    //-     i.bi.bi-car-front.mb-3.fs-1.text-primary
+                    //-     h6 Otomotif
 
-                    .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
-                        i.bi.bi-water.mb-3.fs-1.text-primary
-                        h6 Perikanan
+                    //- .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
+                    //-     i.bi.bi-water.mb-3.fs-1.text-primary
+                    //-     h6 Perikanan
 
-                    .col-12.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
-                        i.bi.bi-boxes.mb-3.fs-1.text-primary
-                        h6 Operasi, Gudang
+                    //- .col-12.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
+                    //-     i.bi.bi-boxes.mb-3.fs-1.text-primary
+                    //-     h6 Operasi, Gudang
