update kategori style

--- a/pug/home/section_lembagapelatihan.pug
+++ b/pug/home/section_lembagapelatihan.pug
@@ -63,13 +63,13 @@ section.section-course.py-3.py-lg-5
 
         .row
             .col-lg-12.mb-4
-                h5.my-4 Kategori Pelatihan Terbanyak
+                h5 Kategori Pelatihan Terbanyak
                 div#course-category(style="height:600px")
                 //- span.skeleton-box.w-100.rounded(style="height:300px")
 
             .col-lg-12.mb-4
-                h5.mb-4 Kategori Pilihan Paling Diminati
-                #course-category-list.row.px-3
+                h5.mb-4.text-center Kategori Pilihan Paling Diminati
+                #course-category-list.row
                     //- .col-6.col-lg-20.col-md-6.p-4.align-items-end.p-3.text-start
                     //-     i.bi.bi-shop.mb-3.fs-1.text-primary
                     //-     h6 Penjualan & Pemasaran
