--- a/pug/home/section_insentif.pug
+++ b/pug/home/section_insentif.pug
@@ -6,10 +6,10 @@ section.section-course.py-3.py-lg-5
             .col-lg-12.mb-4
                 h5 Rekening Penerimaan Insentif
                 //- Chart
-                div#rekeningPenerimaanInsentif
-                    span.skeleton-box.w-100.rounded(style="height:300px")
+                div#rekeningPenerimaanInsentif(style="height:300px")
+                    //- span.skeleton-box.w-100.rounded(style="height:300px")
             
-            .col-lg-12.mb-4
+            //- .col-lg-12.mb-4
                 h5 Pemanfaatan Insentif
                 .row.px-3
                     .col-6.col-lg-20.col-md-6.bg-b800.p-4.rounded-lg-start.text-start
@@ -38,12 +38,12 @@ section.section-course.py-3.py-lg-5
                         p.text-white.mb-0.fs-7 Pembelian Pelatihan di Luar Prakerja
 
             //- Chart
-            .col-lg-12.mb-4
+            //- .col-lg-12.mb-4
                 h5 Manfaat yang dirasakan setelah mengikuti Program Prakerja
                 div#rekeningPenerimaanInsentif
                     span.skeleton-box.w-100.rounded(style="height:300px")
 
-            .col-lg-12.mb-4
+            //- .col-lg-12.mb-4
                 h5 Pemanfaatan Insentif
                 .row.gap-0.d-flex.align-items-end.px-3
                     .col-lg-3.m-0.p-0
