handle for city and update function

--- a/css/scss/pds-penerima.scss
+++ b/css/scss/pds-penerima.scss
@@ -70,7 +70,7 @@ body {
   // outline: solid 1px red;
 }
 
-#maps-indonesia {
+#maps-indonesia, #maps-province, #maps-kabupaten {
   width: 100%;
   min-height: calc(100vh - 6rem);
 }
