--- a/provinsi/index.pug
+++ b/provinsi/index.pug
@@ -17,9 +17,14 @@ html(lang="id" translate="no" page-class="home")
 
             include ../pug/provinsi/section_breadcrumbs.pug
             include ../pug/provinsi/section_content_hero.pug
-            include ../pug/provinsi/section_table_persebaran_provinsi.pug
-            include ../pug/provinsi/section_profil_penerima.pug
-            include ../pug/home/section_inklusivitas.pug
+            include ../pug/provinsi/section_table_persebaran_penerima_kota.pug
+            include ../pug/home/section_profil_penerima.pug
+            //- include ../pug/home/section_inklusivitas.pug
+            include ../pug/home/section_kategori_pelatihan.pug
+            include ../pug/home/section_insentif.pug
+            //- include ../pug/provinsi/section_table_persebaran_provinsi.pug
+            //- include ../pug/provinsi/section_profil_penerima.pug
+            //- include ../pug/home/section_inklusivitas.pug
 
         include ../pug/includes/footer.pug
     include ../pug/includes/html_foot.pug
