--- a/index.pug
+++ b/index.pug
@@ -19,11 +19,8 @@ html(lang="id" translate="no" page-class="home")
             include pug/home/section_profil_penerima.pug
             include pug/home/section_inklusivitas.pug
             include pug/home/section_lembagapelatihan.pug
+            include pug/home/section_kategori_pelatihan.pug
             include pug/home/section_insentif.pug
             //- include pug/home/section_testimony.pug
-            
-
-
-
         include pug/includes/footer.pug
     include pug/includes/html_foot.pug
