--- a/pug/provinsi/section_content_hero.pug
+++ b/pug/provinsi/section_content_hero.pug
@@ -23,6 +23,6 @@ section.section-course
                 p.fs-7.mt-2 Provinsi Jambi berada di peringkat ke-17 penerima terbanyak Prakerja dari 38 provinsi selama periode 2020-2024 (per Juli 2024)
                 
             .col-lg-8.bg-s100.p-4(style="min-height:320px") 
-                p Map Canvas 
+                #maps-province
 
             
