--- a/css/scss/pds-penerima.scss
+++ b/css/scss/pds-penerima.scss
@@ -1183,6 +1183,13 @@ body {
   }
 }
 
+.autoComplete_wrapper{
+  width: 100%;
+  .form-control{
+    width: 100%;
+  }
+}
+
 .popup-search{
   width:100%;
   max-height: 300px;
