--- a/pug/includes/navigation.pug
+++ b/pug/includes/navigation.pug
@@ -19,7 +19,7 @@ header.pdt-header
           .input-group.custom-search-2.search-only
             //- button#button-addon1.btn.btn-outline-light(type='button')
               i.bi.bi-search
-            input#autoComplete.form-control(aria-label='Sizing example input' aria-describedby='inputGroup-sizing-default' placeholder='Cari provinsi / kabupaten...' type="search" dir="ltr" spellcheck=false autocorrect="off" autocomplete="off" autocapitalize="off" maxlength="2048" tabindex="1")
+            input#autoComplete.form-control(aria-label='Sizing example input' aria-describedby='inputGroup-sizing-default' placeholder='Cari provinsi / kabupaten...' type="search" dir="ltr" spellcheck=false autocorrect="off" autocomplete="off" autocapitalize="off" maxlength="2048" tabindex="1" style="width:100%")
           //- .popup-search
           //-   dl 
           //-     dd 
