--- a/pug/provinsi/section_breadcrumbs.pug
+++ b/pug/provinsi/section_breadcrumbs.pug
@@ -8,4 +8,4 @@ section#breadcrumb-detail.pt-4
               i.bi.bi-house-door
           li.breadcrumb-item
             a(href='/jambi') Jambi 
-          li.breadcrumb-item.active.text-truncate Semua Kabupaten
+          li.breadcrumb-item.active Semua Kabupaten
