--- a/pug/includes/html_head.pug
+++ b/pug/includes/html_head.pug
@@ -31,7 +31,7 @@ head
     link(href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@600;700;900&display=swap" rel="stylesheet")
     link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css")
     link(rel="stylesheet", href="https://cdn.datatables.net/2.1.4/css/dataTables.bootstrap5.css")
-    link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.min.css")
+    //- link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.min.css")
     //- link(href="https://cdn.datatables.net/v/bs5/dt-2.1.3/af-2.7.0/b-3.1.1/fc-5.0.1/fh-4.0.1/r-3.0.2/datatables.min.css" rel="stylesheet")
     //- link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@algolia/autocomplete-theme-classic")
 
@@ -40,6 +40,7 @@ head
     //-- load css start -->
     link(rel='stylesheet' href=baseURL+'css/bootstrap.css')
     link(rel='stylesheet' href=baseURL+'css/pds-penerima.css')
+    link(rel='stylesheet' href=baseURL+'css/autoComplete.css')
     link(rel='stylesheet' href=baseURL+'css/owl.carousel.css')
     
     //-- load css end -->
