fix merge conflict

--- a/css/scss/pds-penerima.scss
+++ b/css/scss/pds-penerima.scss
@@ -75,7 +75,7 @@ body {
   min-height: calc(100vh - 6rem);
 }
 
-#maps-province, #maps-kabupaten {
+#maps-province, #maps-regency {
   width: 100%;
   min-height: calc(70vh - 6rem);
 }
