--- a/pug/kabupaten/section_content_hero.pug
+++ b/pug/kabupaten/section_content_hero.pug
@@ -3,7 +3,7 @@ section.section-course
         .row.d-flex.flex-row-reverse
             .col-lg-4.bg-s200.p-4
                 div
-                    .h6 Provinsi
+                    .h6 Kabupaten
                     h1.province-name Memuat Data 
                     .island-name.h6.text-secondary Memuat Data
 
@@ -22,7 +22,7 @@ section.section-course
 
                 p.fs-7.mt-2.narasi Memuat Data
                 
-            .col-lg-8.bg-s100.p-4(style="min-height:320px") 
-                #maps-province
+            .col-lg-8.bg-s100.p-4(style="min-height:420px") 
+                #maps-regency
 
             
