--- a/kabupaten/index.pug
+++ b/kabupaten/index.pug
@@ -3,7 +3,7 @@
 - var pageActive = ''
 - var baseURL = '../'
 - var contentDescription = {}
-- contentDescription.title = "Provinsi ABC - prakerja.go.id"
+- contentDescription.title = "Kabupaten - prakerja.go.id"
 - contentDescription.description = "Informasi statistik penerima prakerja selama periode 2020 - 2024."
 - contentDescription.ogImage = "https://raw.githubusercontent.com/Kartu-Prakerja/laporan-penerima/main/img/img-cover-statistik-prakerja.png"
 
@@ -15,16 +15,12 @@ html(lang="id" translate="no" page-class="home")
         include ../pug/includes/navigation.pug
         main
 
-            include ../pug/provinsi/section_breadcrumbs.pug
-            include ../pug/provinsi/section_content_hero.pug
-            include ../pug/provinsi/section_table_pesebaran_penerima_kota.pug
+            include ../pug/kabupaten/section_breadcrumbs.pug
+            include ../pug/kabupaten/section_content_hero.pug
+            include ../pug/kabupaten/section_table_pesebaran_penerima_kabupaten.pug
             include ../pug/home/section_profil_penerima.pug
-            //- include ../pug/home/section_inklusivitas.pug
             include ../pug/home/section_kategori_pelatihan.pug
             include ../pug/home/section_insentif.pug
-            //- include ../pug/provinsi/section_table_persebaran_provinsi.pug
-            //- include ../pug/provinsi/section_profil_penerima.pug
-            //- include ../pug/home/section_inklusivitas.pug
 
         include ../pug/includes/footer.pug
     include ../pug/includes/html_foot.pug
