update information for detail regency

--- a/pug/kabupaten/section_content_hero.pug
+++ b/pug/kabupaten/section_content_hero.pug
@@ -3,9 +3,9 @@ section.section-course
         .row.d-flex.flex-row-reverse
             .col-lg-4.bg-s200.p-4
                 div
-                    #regency-name.h6 Kabupaten
+                    .regency-name.h6 Kabupaten
                     h1#city-name.text-capitalize Memuat Data 
-                    #province-name.h6.text-secondary Memuat Data
+                    .province-name.h6.text-secondary Memuat Data
 
                 hr
 
