--- a/pug/provinsi/section_content_hero.pug
+++ b/pug/provinsi/section_content_hero.pug
@@ -4,7 +4,7 @@ section.section-course
             .col-lg-4.bg-s200.p-4
                 div
                     .h6 Provinsi
-                    h1#province-name Memuat Data 
+                    h1.province-name Memuat Data 
                     #island-name.h6.text-secondary Memuat Data
 
                 hr
@@ -16,7 +16,7 @@ section.section-course
                     .outer-funfact
                         .d-inline-flex
                             i.bi.bi-mortarboard.fs-2.align-self-center
-                            b#age-workes.ms-2.h4.mb-0.align-self-center 32.34%
+                            b#age-workes.ms-2.h4.mb-0.align-self-center ~
                         .d-flex
                             span.text-secondary.fs-7 Angkatan kerja
                         //- .inner-funfact.d-flex.align-items-center.justify-content-center
@@ -25,7 +25,7 @@ section.section-course
                     .outer-funfact.ms-auto
                         .d-inline-flex
                             i.bi.bi-activity.fs-2.align-self-center
-                            b#age-productive.ms-2.h4.mb-0.align-self-center 32.34%
+                            b#age-productive.ms-2.h4.mb-0.align-self-center ~
                         .d-flex
                             span.text-secondary.fs-7 Angkatan kerja usia produktif
                         //- .inner-funfact.d-flex.align-items-center.justify-content-center
