update style map

--- a/pug/home/section_maps.pug
+++ b/pug/home/section_maps.pug
@@ -4,3 +4,4 @@ section.section-hero
         span Prakerja 
         | 2020 - 2024
     #maps-indonesia.container-fluid
+    span.scroll-hint Scroll
