--- a/pug/home/section_table_persebaran_penerima.pug
+++ b/pug/home/section_table_persebaran_penerima.pug
@@ -8,27 +8,27 @@ section.section-course.py-4.pt-lg-5
                     thead
                         tr
                             th(rowspan="2") Provinsi
-                            th(colspan="2") 2020
-                            th(colspan="2") 2021
-                            th(colspan="2") 2022
-                            th(colspan="2") 2023
-                            th(colspan="2") 2024
+                            th.text-center(colspan="2") 2020
+                            th.text-center(colspan="2") 2021
+                            th.text-center(colspan="2") 2022
+                            th.text-center(colspan="2") 2023
+                            th.text-center(colspan="2") 2024
 
                         tr
-                            td SK Penetapan      
-                            td Aktif
+                            td.text-end SK Penetapan      
+                            td.text-end Aktif
 
-                            td SK Penetapan      
-                            td Aktif 
+                            td.text-end SK Penetapan      
+                            td.text-end Aktif 
 
-                            td SK Penetapan      
-                            td Aktif 
+                            td.text-end SK Penetapan      
+                            td.text-end Aktif 
 
-                            td SK Penetapan      
-                            td Aktif 
+                            td.text-end SK Penetapan      
+                            td.text-end Aktif 
 
-                            td SK Penetapan      
-                            td Aktif  
+                            td.text-end SK Penetapan      
+                            td.text-end Aktif  
 
                         tbody(rowspan="1" colspan="11")
                         //- tr 
