--- a/pug/kabupaten/section_table_pesebaran_penerima_kabupaten.pug
+++ b/pug/kabupaten/section_table_pesebaran_penerima_kabupaten.pug
@@ -8,11 +8,11 @@ section.section-course.py-4.pt-lg-5
                     thead
                         tr
                             th(rowspan="2") Kecamatan
-                            th(colspan="2") 2020
-                            th(colspan="2") 2021
-                            th(colspan="2") 2022
-                            th(colspan="2") 2023
-                            th(colspan="2") 2024
+                            th.text-center(colspan="2") 2020
+                            th.text-center(colspan="2") 2021
+                            th.text-center(colspan="2") 2022
+                            th.text-center(colspan="2") 2023
+                            th.text-center(colspan="2") 2024
 
                         tr
                             td SK Penetapan      
