--- a/pug/provinsi/section_table_pesebaran_penerima_kota.pug
+++ b/pug/provinsi/section_table_pesebaran_penerima_kota.pug
@@ -4,15 +4,15 @@ section.section-course.py-4.pt-lg-5
             h4.custom-rfs-h4 Persebaran Penerima
             p Data berasal dari seluruh Indonesia tahun 2020-2024 dengan skema Semi Bansos dan Skema Normal (Gelombang 1-69).
             .overflow-x-scroll
-                table#tablePersebaran.table.table-hover.fs-7.my-4.display.dataTable
+                table#tablePersebaran.table.table-hover.fs-7.my-4.display.dataTable.table-mobile-xxs
                     thead
                         tr
                             th(rowspan="2") Kota / Kabupaten
-                            th(colspan="2") 2020
-                            th(colspan="2") 2021
-                            th(colspan="2") 2022
-                            th(colspan="2") 2023
-                            th(colspan="2") 2024
+                            th.text-center(colspan="2") 2020
+                            th.text-center(colspan="2") 2021
+                            th.text-center(colspan="2") 2022
+                            th.text-center(colspan="2") 2023
+                            th.text-center(colspan="2") 2024
 
                         tr
                             td SK Penetapan      
