add table mobile view

--- a/pug/provinsi/section_table_persebaran_provinsi.pug
+++ b/pug/provinsi/section_table_persebaran_provinsi.pug
@@ -4,7 +4,7 @@ section.section-course.py-4.pt-lg-5
             h4 Persebaran Penerima
             p Data berasal dari seluruh Indonesia tahun 2020-2024 dengan skema Semi Bansos dan Skema Normal (Gelombang 1-69).
             .overflow-x-scroll
-                table#tablePersebaranProvinsi.table.table-hover.fs-7.my-4
+                table#tablePersebaranProvinsi.table.table-hover.fs-7.my-4.display.dataTable.table-mobile-xxs
                     thead
                         tr
                             th(rowspan="2") Provinsi
